tools/tree-sitter-lonala/test/corpus/collections.txt
================================================================================
Empty list
================================================================================

()

--------------------------------------------------------------------------------

(source_file
  (list))

================================================================================
Simple list
================================================================================

(1 2 3)

--------------------------------------------------------------------------------

(source_file
  (list
    (number)
    (number)
    (number)))

================================================================================
List with mixed elements
================================================================================

(foo :bar "baz" 42)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (keyword)
    (string)
    (number)))

================================================================================
Nested lists
================================================================================

((a b) (c d))

--------------------------------------------------------------------------------

(source_file
  (list
    (list
      (symbol)
      (symbol))
    (list
      (symbol)
      (symbol))))

================================================================================
Empty vector
================================================================================

[]

--------------------------------------------------------------------------------

(source_file
  (vector))

================================================================================
Simple vector
================================================================================

[1 2 3]

--------------------------------------------------------------------------------

(source_file
  (vector
    (number)
    (number)
    (number)))

================================================================================
Nested vectors
================================================================================

[[1 2] [3 4]]

--------------------------------------------------------------------------------

(source_file
  (vector
    (vector
      (number)
      (number))
    (vector
      (number)
      (number))))

================================================================================
Empty map
================================================================================

{}

--------------------------------------------------------------------------------

(source_file
  (map))

================================================================================
Simple map
================================================================================

{:a 1 :b 2}

--------------------------------------------------------------------------------

(source_file
  (map
    (keyword)
    (number)
    (keyword)
    (number)))

================================================================================
Nested maps
================================================================================

{:outer {:inner 42}}

--------------------------------------------------------------------------------

(source_file
  (map
    (keyword)
    (map
      (keyword)
      (number))))

================================================================================
Empty set
================================================================================

#{}

--------------------------------------------------------------------------------

(source_file
  (set))

================================================================================
Simple set
================================================================================

#{1 2 3}

--------------------------------------------------------------------------------

(source_file
  (set
    (number)
    (number)
    (number)))

================================================================================
Nested set
================================================================================

#{#{1} #{2}}

--------------------------------------------------------------------------------

(source_file
  (set
    (set
      (number))
    (set
      (number))))

================================================================================
Mixed collections
================================================================================

{:list (1 2) :vector [3 4] :set #{5 6}}

--------------------------------------------------------------------------------

(source_file
  (map
    (keyword)
    (list
      (number)
      (number))
    (keyword)
    (vector
      (number)
      (number))
    (keyword)
    (set
      (number)
      (number))))

================================================================================
Function call syntax
================================================================================

(+ 1 2)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (number)
    (number)))

================================================================================
Defn form
================================================================================

(defn foo [x] x)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (symbol)
    (vector
      (symbol))
    (symbol)))

================================================================================
Let binding
================================================================================

(let [x 1 y 2] (+ x y))

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (vector
      (symbol)
      (number)
      (symbol)
      (number))
    (list
      (symbol)
      (symbol)
      (symbol))))

================================================================================
Commas as whitespace
================================================================================

[1, 2, 3]
{:a 1, :b 2}

--------------------------------------------------------------------------------

(source_file
  (vector
    (number)
    (number)
    (number))
  (map
    (keyword)
    (number)
    (keyword)
    (number)))
