tools/tree-sitter-lonala/test/corpus/edge_cases.txt
================================================================================
Minus as operator vs negative number
================================================================================

(- 1 2)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (number)
    (number)))

================================================================================
Negative number standalone
================================================================================

-42

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Plus as operator
================================================================================

(+ 1 2)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (number)
    (number)))

================================================================================
Deeply nested structure
================================================================================

(((((x)))))

--------------------------------------------------------------------------------

(source_file
  (list
    (list
      (list
        (list
          (list
            (symbol)))))))

================================================================================
Adjacent reader macros
================================================================================

'`~x

--------------------------------------------------------------------------------

(source_file
  (quote
    (syntax_quote
      (unquote
        (symbol)))))

================================================================================
Unicode symbol
================================================================================

λ

--------------------------------------------------------------------------------

(source_file
  (symbol))

================================================================================
Unicode keyword
================================================================================

:λ

--------------------------------------------------------------------------------

(source_file
  (keyword))

================================================================================
Symbol with dots
================================================================================

foo.bar.baz

--------------------------------------------------------------------------------

(source_file
  (symbol))

================================================================================
Symbol with slash (namespace)
================================================================================

ns/name

--------------------------------------------------------------------------------

(source_file
  (symbol))

================================================================================
Keyword with slash
================================================================================

:ns/name

--------------------------------------------------------------------------------

(source_file
  (keyword))

================================================================================
Empty collections adjacent
================================================================================

() [] {} #{}

--------------------------------------------------------------------------------

(source_file
  (list)
  (vector)
  (map)
  (set))

================================================================================
Complex real-world example
================================================================================

(defn process-data
  [data opts]
  (let [result (transform data)]
    {:status :ok
     :data result
     :meta ^:processed {:timestamp 12345}}))

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (symbol)
    (vector
      (symbol)
      (symbol))
    (list
      (symbol)
      (vector
        (symbol)
        (list
          (symbol)
          (symbol)))
      (map
        (keyword)
        (keyword)
        (keyword)
        (symbol)
        (keyword)
        (metadata
          (keyword)
          (map
            (keyword)
            (number)))))))

================================================================================
All number formats in one
================================================================================

42 -17 0xFF -0b1010 0o755 3.14 1e10 22/7 ##NaN ##Inf ##-Inf

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number))

================================================================================
Symbol after number without space
================================================================================

(42foo)

--------------------------------------------------------------------------------

(source_file
  (list
    (number)
    (symbol)))

================================================================================
Multiline form
================================================================================

(defn foo
  [x y]
  (+ x y))

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (symbol)
    (vector
      (symbol)
      (symbol))
    (list
      (symbol)
      (symbol)
      (symbol))))

================================================================================
Comments between forms
================================================================================

(foo ; comment
 bar)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (comment)
    (symbol)))

================================================================================
Comment only
================================================================================

; just a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Empty source file
================================================================================

--------------------------------------------------------------------------------

(source_file)

================================================================================
Whitespace only
================================================================================



--------------------------------------------------------------------------------

(source_file)

================================================================================
Macro within collection
================================================================================

[^:tag x]

--------------------------------------------------------------------------------

(source_file
  (vector
    (metadata
      (keyword)
      (symbol))))

================================================================================
Var quote in list
================================================================================

(map #'foo coll)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (var_quote
      (symbol))
    (symbol)))

================================================================================
Multiple discards
================================================================================

#_a #_b c

--------------------------------------------------------------------------------

(source_file
  (discard
    (symbol))
  (discard
    (symbol))
  (symbol))

================================================================================
Question mark symbol
================================================================================

empty?

--------------------------------------------------------------------------------

(source_file
  (symbol))

================================================================================
Bang symbol
================================================================================

swap!

--------------------------------------------------------------------------------

(source_file
  (symbol))

================================================================================
Arrow symbols
================================================================================

->
->>
as->

--------------------------------------------------------------------------------

(source_file
  (symbol)
  (symbol)
  (symbol))

================================================================================
Ratio in expression
================================================================================

(+ 1/2 1/3)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (number)
    (number)))

================================================================================
Double colon is error
================================================================================

::foo

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (UNEXPECTED ':'))
  (keyword))
