tools/tree-sitter-lonala/test/corpus/literals.txt
================================================================================
Integer literals
================================================================================

42
-17
0

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number))

================================================================================
Hexadecimal integers
================================================================================

0xFF
0x1a2b
-0xDEAD

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number))

================================================================================
Binary integers
================================================================================

0b1010
0B1111
-0b0001

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number))

================================================================================
Octal integers
================================================================================

0o755
0O123
-0o777

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number))

================================================================================
Float literals
================================================================================

3.14
-0.5
123.456

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number))

================================================================================
Scientific notation
================================================================================

1e10
1E10
-2e-5
3.14e+2
1.5E-3

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number)
  (number)
  (number))

================================================================================
Special floats
================================================================================

##NaN
##Inf
##-Inf

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number))

================================================================================
Ratio literals
================================================================================

1/2
22/7
-3/4

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number))

================================================================================
Simple strings
================================================================================

"hello"
"world"
""

--------------------------------------------------------------------------------

(source_file
  (string)
  (string)
  (string))

================================================================================
Strings with escape sequences
================================================================================

"line\nbreak"
"tab\there"
"quote\"here"
"backslash\\"
"null\0char"

--------------------------------------------------------------------------------

(source_file
  (string)
  (string)
  (string)
  (string)
  (string))

================================================================================
Strings with unicode escapes
================================================================================

"\u0041"
"Greek: \u03B1"
"\u0000"

--------------------------------------------------------------------------------

(source_file
  (string)
  (string)
  (string))

================================================================================
Boolean literals
================================================================================

true
false

--------------------------------------------------------------------------------

(source_file
  (boolean)
  (boolean))

================================================================================
Nil literal
================================================================================

nil

--------------------------------------------------------------------------------

(source_file
  (nil))

================================================================================
Simple keywords
================================================================================

:foo
:bar
:hello-world

--------------------------------------------------------------------------------

(source_file
  (keyword)
  (keyword)
  (keyword))

================================================================================
Keywords with special characters
================================================================================

:foo?
:bar!
:+
:-
:*

--------------------------------------------------------------------------------

(source_file
  (keyword)
  (keyword)
  (keyword)
  (keyword)
  (keyword))

================================================================================
Simple symbols
================================================================================

foo
bar
hello-world

--------------------------------------------------------------------------------

(source_file
  (symbol)
  (symbol)
  (symbol))

================================================================================
Operator symbols
================================================================================

+
-
*
/
<
>
=
<=
>=

--------------------------------------------------------------------------------

(source_file
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol))

================================================================================
Symbols with special characters
================================================================================

foo?
bar!
empty?
swap!
->arrow
->>thread

--------------------------------------------------------------------------------

(source_file
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol))

================================================================================
Line comments
================================================================================

; this is a comment
42 ; inline comment

--------------------------------------------------------------------------------

(source_file
  (comment)
  (number)
  (comment))
