tools/tree-sitter-lonala/test/corpus/reader_macros.txt
================================================================================
Quote symbol
================================================================================

'x

--------------------------------------------------------------------------------

(source_file
  (quote
    (symbol)))

================================================================================
Quote list
================================================================================

'(1 2 3)

--------------------------------------------------------------------------------

(source_file
  (quote
    (list
      (number)
      (number)
      (number))))

================================================================================
Syntax quote symbol
================================================================================

`x

--------------------------------------------------------------------------------

(source_file
  (syntax_quote
    (symbol)))

================================================================================
Syntax quote with unquote
================================================================================

`(a ~b c)

--------------------------------------------------------------------------------

(source_file
  (syntax_quote
    (list
      (symbol)
      (unquote
        (symbol))
      (symbol))))

================================================================================
Unquote splice
================================================================================

`(a ~@b c)

--------------------------------------------------------------------------------

(source_file
  (syntax_quote
    (list
      (symbol)
      (unquote_splice
        (symbol))
      (symbol))))

================================================================================
Simple metadata keyword
================================================================================

^:private foo

--------------------------------------------------------------------------------

(source_file
  (metadata
    (keyword)
    (symbol)))

================================================================================
Map metadata
================================================================================

^{:doc "test"} foo

--------------------------------------------------------------------------------

(source_file
  (metadata
    (map
      (keyword)
      (string))
    (symbol)))

================================================================================
Var quote
================================================================================

#'my-var

--------------------------------------------------------------------------------

(source_file
  (var_quote
    (symbol)))

================================================================================
Discard form
================================================================================

#_ignored

--------------------------------------------------------------------------------

(source_file
  (discard
    (symbol)))

================================================================================
Discard list
================================================================================

#_(this is ignored)

--------------------------------------------------------------------------------

(source_file
  (discard
    (list
      (symbol)
      (symbol)
      (symbol))))

================================================================================
Anonymous function simple
================================================================================

#(+ 1 2)

--------------------------------------------------------------------------------

(source_file
  (anon_fn
    (symbol)
    (number)
    (number)))

================================================================================
Anonymous function with argument
================================================================================

#(+ % 1)

--------------------------------------------------------------------------------

(source_file
  (anon_fn
    (symbol)
    (symbol)
    (number)))

================================================================================
Anonymous function with numbered arguments
================================================================================

#(+ %1 %2)

--------------------------------------------------------------------------------

(source_file
  (anon_fn
    (symbol)
    (symbol)
    (symbol)))

================================================================================
Nested quotes
================================================================================

''x

--------------------------------------------------------------------------------

(source_file
  (quote
    (quote
      (symbol))))

================================================================================
Metadata on function
================================================================================

^:private (defn foo [x] x)

--------------------------------------------------------------------------------

(source_file
  (metadata
    (keyword)
    (list
      (symbol)
      (symbol)
      (vector
        (symbol))
      (symbol))))

================================================================================
Multiple metadata
================================================================================

^:private ^:dynamic foo

--------------------------------------------------------------------------------

(source_file
  (metadata
    (keyword)
    (metadata
      (keyword)
      (symbol))))

================================================================================
Complex syntax quote
================================================================================

`(let [x ~value] (foo x))

--------------------------------------------------------------------------------

(source_file
  (syntax_quote
    (list
      (symbol)
      (vector
        (symbol)
        (unquote
          (symbol)))
      (list
        (symbol)
        (symbol)))))

================================================================================
Discard with code after
================================================================================

#_foo bar

--------------------------------------------------------------------------------

(source_file
  (discard
    (symbol))
  (symbol))
